--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div class="container-fluid m-0 p-0 ">
 
-    <!-- Navbar  -->
+    <!-- displays the Navbar  -->
     <div>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -57,14 +57,14 @@
     </div>
 
 
-    <!-- General News -->
+    <!-- Displays the General News -->
     <div>
       <div class="row" id="newstype"></div>
       <div class="row" id="newsdetails"></div>
 
     </div>
 
-    <!-- footer -->
+    <!--Displays the footer -->
     <div>
       <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-4">
