--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <title>Izindaba</title>
 </head>
 
-<body class="m-0 p-0">
+<body class="m-0 p-0 ">
 
-  <div class="container-fluid m-0 p-0 ">
+  <div class="container-fluid m-0 p-0 bg-dark">
 
     <!-- displays the Navbar  -->
     <div>
@@ -59,13 +59,13 @@
 
     <!-- Displays the General News -->
     <div>
-      <div class="row" id="newstype"></div>
-      <div class="row" id="newsdetails"></div>
+      <div class="row mt-3 text-center text-white" id="newstype"></div>
+      <div class="row me-2 ms-2" id="newsdetails"></div>
 
     </div>
 
     <!--Displays the footer -->
-    <div>
+    <div class="mt-5">
       <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-4">
           <div class="container-fluid">
