added styling, bg-colour

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="m-0 p-0 ">
 
-  <div class="container-fluid m-0 p-0 bg-dark">
+  <div class="container-fluid m-0 p-0 bg-info">
 
     <!-- displays the Navbar  -->
     <div>
