--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Izindaba</title>
 </head>
 
-<body class="m-0 p-0 ">
+<body class="m-0 p-0">
 
   <div class="container-fluid m-0 p-0 bg-info">
 
@@ -21,35 +21,35 @@
     <div>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand text-warning" href="#">Izindaba</a>
+          <a class="navbar-brand text-info" href="#">IZINDABA</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#generalnews" id="generalnews">General News</a>
+                <a class="nav-link text-white" aria-current="page" href="#generalnews" id="generalnews">General News</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#sports" id="sports">Sports</a>
+                <a class="nav-link text-white " aria-current="page" href="#sports" id="sports">Sports</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#business" id="business">Business</a>
+                <a class="nav-link text-white" href="#business" id="business">Business</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="#entertainment" id="entertainment">Entertainment</a>
+                <a class="nav-link text-white " aria-current="page" href="#entertainment" id="entertainment">Entertainment</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#technology" id="technology">Technology</a>
+                <a class="nav-link text-white" href="#technology" id="technology">Technology</a>
               </li>
-
-
             </ul>
+
             <form class="d-flex">
               <input class="form-control me-2" type="text" id="newsinput" placeholder="Search News">
-              <button class="btn btn-outline-danger" type="button" id="searchBtn">Search</button>
+              <button class="btn btn-outline-info" type="button" id="searchBtn">Search</button>
             </form>
           </div>
         </div>
@@ -59,8 +59,8 @@
 
     <!-- Displays the General News -->
     <div>
-      <div class="row mt-3 text-center text-white" id="newstype"></div>
-      <div class="row me-2 ms-2" id="newsdetails"></div>
+      <div class="row mt-3 text-center text-dark" id="newstype"></div>
+      <div class="row me-2 ms-2 p-4" id="newsdetails"></div>
 
     </div>
 
